everything except hook

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,13 +16,13 @@
             </div>
             <ul id="tools">
                 <li>
-                    <a href="#">Log in to write something</a>
+                     <a href="@{Admin.index()}">Log in to write something</a>
                 </li>
             </ul>
             <div id="title">
                 <span class="about">Assessment for ScaleGrid.io by Matthew Nadarajah</span>
                 <h1><a href="#">${blogTitle}</a></h1>
-                <h2>${blogBaseline}</h2>
+                <h4>${blogBaseline}</h2>
             </div>
         </div>
         
