--- a/app/views/main.html
+++ b/app/views/main.html
@@ -18,6 +18,9 @@
                 <li>
                      <a href="@{Admin.index()}">Log in to write something</a>
                 </li>
+                <li>
+                     <a href="/users/blank">Add a user</a>
+                </li>
             </ul>
             <div id="title">
                 <span class="about">Assessment for ScaleGrid.io by Matthew Nadarajah</span>
