fixed email logic

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,7 +16,10 @@
             </div>
             <ul id="tools">
                 <li>
-                     <a href="@{Admin.index()}">Log in to write something</a>
+                     <a href="@{Admin.index()}">Log in</a>
+                </li>
+                <li>
+                     <a href="/logout">Log out</a>
                 </li>
                 <li>
                      <a href="/users/blank">Add a user</a>
@@ -24,7 +27,6 @@
             </ul>
             <div id="title">
                 <span class="about">Assessment for ScaleGrid.io by Matthew Nadarajah</span>
-                <h1><a href="#">${blogTitle}</a></h1>
                 <h4>${blogBaseline}</h2>
             </div>
         </div>
